force-app/main/default/objects/Change_Request__c/fields/CR_Decision__c.field-meta.xml
<CustomField>
    <fullName>CR_Decision__c</fullName>
    <label>CR Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>