force-app/main/default/objects/Change_Request__c/fields/Impact__c.field-meta.xml
<CustomField>
    <fullName>Impact__c</fullName>
    <label>Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Sprint Delay</fullName>
            </value>
            <value>
                <fullName>2 Sprint Delay</fullName>
            </value>
            <value>
                <fullName>1 Week Delay</fullName>
            </value>
            <value>
                <fullName>2 Week Delay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>