force-app/main/default/objects/Change_Request__c/fields/Task_List__c.field-meta.xml
<CustomField>
    <fullName>Task_List__c</fullName>
    <label>Task List</label>
    <referenceTo>Task_List__c</referenceTo>
    <relationshipName>Change_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>