force-app/main/default/objects/Change_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Estimated_Hours__c</columns>
    <columns>Project__c</columns>
    <columns>Type__c</columns>
    <columns>CR_Decision__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Decision_Date__c</columns>
    <columns>Reason_For_Rejected__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>