force-app/main/default/objects/Change_Request__c/listViews/All_List.listView-meta.xml
<ListView>
    <fullName>All_List</fullName>
    <columns>NAME</columns>
    <columns>CR_Decision__c</columns>
    <columns>Decision_By__c</columns>
    <columns>Decision_Date__c</columns>
    <columns>Description__c</columns>
    <columns>Estimated_Hours__c</columns>
    <columns>Impact__c</columns>
    <columns>Reason_For_Rejected__c</columns>
    <columns>Project__c</columns>
    <filterScope>Everything</filterScope>
    <label>All List</label>
</ListView>